# czmq_trial

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
zsock/: Makefile.am  Makefile.in  XSubTest.cc  env.sh
